syntax = "proto3";
package product.auditing.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.product.auditing.api";
option java_outer_classname = "ProductAuditingServiceApi";

import "google/protobuf/wrappers.proto";
import "product-auditing-service/shared.proto";

service ProductAuditingService {
  rpc addProductPriceHistory(PProductPriceHistory) returns (google.protobuf.Int32Value);

  rpc getProductPriceHistories(google.protobuf.Int32Value) returns (PProductPriceHistoriesResponse);
}
